[project]
name = "timelyzer"
version = "0.1.0"
description = "Time series forecasting projects"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "scikit-learn",
    "statsmodels",
    "prophet",
    "yfinance",
    "pmdarima",
    "tabulate",
    "plotly",
    "holidays",
    "seaborn",
    "tqdm",
    "ipykernel",
    "ipywidgets",
]
